--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,130 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+}
+
+.wrapper {
+  width: 1280px;
+  margin: 50px auto;
+}
+
+header .header {
+  position: relative;
+}
+
+header .logo {
+  font-weight: 600;
+  font-size: 40px;
+}
+
+header ul.nav {
+  float: right;
+  list-style: none;
+  font-size: 20px;
+  position: absolute;
+  right: 0;
+  bottom: 5px;
+}
+
+header ul.nav li {
+  display: inline;
+  margin-left: 35px;
+  cursor: pointer;
+  transition: opacity 500ms ease;
+}
+
+header ul.nav li:hover {
+  opacity: 0.5;
+}
+
+header .presentation {
+  margin: 50px 0;
+  background: url(./images/bg-img.webp);
+  width: 100%;
+  height: 500px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-blend-mode: multiply;
+  background-color: #bcbcbc;
+  position: relative;
+  pointer-events: none;
+}
+
+header .presentation::after {
+  content: "The best stuff for your home";
+  position: absolute;
+  width: 300px;
+  top: 100px;
+  left: 50px;
+  font-size: 40px;
+  font-weight: 600;
+  color: #fff;
+}
+
+header .presentation::before {
+  content: "For the best price";
+  position: absolute;
+  width: 300px;
+  top: 200px;
+  left: 50px;
+  font-size: 20px;
+  font-weight: 300;
+  color: #fff;
+}
+
+main {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 64px;
+}
+
+main .item {
+  width: 30%;
+  margin-bottom: 50px;
+  background: #f5f5f5;
+  position: relative;
+  padding-bottom: 20px;
+  border-radius: 0 0 10px 10px;
+}
+
+main .item img {
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+  pointer-events: none;
+}
+
+main h2,
+main p,
+main b {
+  margin: 10px 20px;
+}
+
+main .add-to-card {
+  position: absolute;
+  right: 20px;
+  bottom: 10px;
+  width: 35px;
+  height: 35px;
+  line-height: 35px;
+  text-align: center;
+  background-color: #bcbcbc;
+  border-radius: 50%;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+footer {
+  text-align: center;
+  margin-top: 100px;
 }
